# best_practive_python_backend

./: LICENSE  Makefile  README.md  aioredis.py  manage.py  pyproject.toml
app/: applications.py  base.py  exceptions.py  log.py  tasks.py  utils.py
app/api/: base.py  base_openapi.yaml  exception_handlers.py  routes.py  web_socket.py
app/api/endpoints/: healthiness.py
app/extensions/: __init__.py  apiman.py  cache.py  coroutine_pool.py  database.py  http_client.py  jwt.py  redis.py
app/models/: __init__.py  base.py
app/rpc/: __init__.py  base.py  healthiness.proto  healthiness.py
app/rpc/proto/healthiness/: __init__.py
app/services/: base.py
settings/: __init__.py  base.py  development.py  production.py  test.py
tests/: base.py  conftest.py  test_api.py  test_model.py  test_rpc.py  test_task.py  test_ws.py
