[tool.poetry]
name = "app"
version = "0.1.0"
description = "A best-practice python backend project"
authors = [
    "strongbugman <strongbugman@gmail.com>",
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
starlette = ">=0.15.0"
gunicorn = ">=20.1.0"
uvicorn = {version = ">=0.15.0", extras = ["standard"]}
hiredis = ">=2.0.0"
aiomysql = ">=0.0.21"
danio = "^0.5.0"
oxalis = "^0.5.0"
apiman = "^0.5.3"
PyJWT = "^2.1.0"
orjson = "^3.6.0"
jsonschema-rs = "^0.16"
tenacity = "^8.0.1"
pycryptodome = "^3.10.1"
Jinja2 = ">=3.0.1"
cached-property = ">=1.5.2"
arrow = ">=1.2.1"
aiohttp = {version = ">=3.8.1", extras = ["speedups"]}
python-multipart = "^0.0.5"
elastic-apm = "^6.10.1"
sentry-sdk = "^1.3.0"
ipython = ">=7.25.0"
redis = "^4.4.0"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = ">=4.6"
pytest-asyncio = ">=0.8.0"
pytest-cov = ">=2.5.1"
mypy = ">=0.910"
flake8 = ">=3.9.2"
isort = ">=5.9.2"
black = ">=21.6b0"
types-orjson = ">=0.1.1"
async-asgi-testclient = ">=1.4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
